--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+### SERVER ###
 
+server.port=9003
+
+server.servlet.context-path=/assessment-centre
+
+
+
+### MySQL DATABASE ###
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+
+spring.datasource.username=Trainee1
+
+spring.datasource.password=myPassword1
+
+spring.jpa.hibernate.ddl-auto=create
+
+### View Resolver ###
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+### LOGGING ###
+logging.level.org.hibernate.SQL=debug
+logging.level.org.springframework.web=INFO
+logging.level.com.fdmgroup=DEBUG
