--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-redux": "^7.2.5",
