--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -7,15 +7,10 @@ server.servlet.context-path=/assessment-centre
 
 
 ### MySQL DATABASE ###
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-
+spring.datasource.url=jdbc:mysql://localhost:3306/groupproject
 spring.datasource.username=Trainee1
-
 spring.datasource.password=myPassword1
-
 spring.jpa.hibernate.ddl-auto=create
 
 ### View Resolver ###
