--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -1,20 +1,21 @@
 ### SERVER ###
 server.port=9003
-server.servlet.context-path=/assessment-centre
+#server.servlet.context-path=/assessment-centre
 
-
+# create and drop tables and sequences, loads import.sql
+spring.jpa.hibernate.ddl-auto=update
 
 ### MySQL DATABASE ###
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/groupproject
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/groupproject?useSSL=false
 spring.datasource.username=Trainee1
 spring.datasource.password=myPassword1
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto=create
 
 ### View Resolver ###
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
 
 ### LOGGING ###
 logging.level.org.hibernate.SQL=debug
