--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 server.port=9003
 #server.servlet.context-path=/assessment-centre
 
+#Authentication
+jwt.secret=javainuse
+
 # create and drop tables and sequences, loads import.sql
 spring.jpa.hibernate.ddl-auto=update
 
