--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=9003
 jwt.secret=javainuse
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 ### MySQL DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
