--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.3",
     "bootstrap": "^5.1.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "file-loader": "^6.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
