--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.1.1",
     "file-loader": "^6.2.0",
     "jquery": "^3.6.0",
+    "node.js": "0.0.1-security",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
