--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9003
 
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 ### MySQL DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -23,3 +23,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 logging.level.org.hibernate.SQL=debug
 logging.level.org.springframework.web=INFO
 logging.level.com.fdmgroup=DEBUG
+
+### Test ###
+# spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
