--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9003
 
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 ### MySQL DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,7 +12,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/groupproject?useSSL=false
 spring.datasource.username=Trainee1
 spring.datasource.password=myPassword1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
 
 
 ### View Resolver ###
@@ -23,6 +22,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 logging.level.org.hibernate.SQL=debug
 logging.level.org.springframework.web=INFO
 logging.level.com.fdmgroup=DEBUG
-
-### Test ###
-# spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
