--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@popperjs/core": "^2.10.1",
+    "@syncfusion/ej2-react-calendars": "^19.2.60",
     "@syncfusion/ej2-react-schedule": "^19.2.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -23,6 +24,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.2.0",
