--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -4,8 +4,7 @@ server.port=9003
 
 
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=update
 ### MySQL DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/groupproject?useSSL=false
