--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "crypto-js": "^4.1.1",
     "file-loader": "^6.2.0",
     "jquery": "^3.6.0",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.20",
     "node.js": "0.0.1-security",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
@@ -34,7 +36,8 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "url-loader": "^4.1.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
