--- a/AssessmentCentreProject/src/main/resources/application.properties
+++ b/AssessmentCentreProject/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 #spring.mvc.view.suffix=.jsp
 
 ### LOGGING ###
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=INFO
 logging.level.org.springframework.web=INFO
-logging.level.com.fdmgroup=DEBUG
+logging.level.com.fdmgroup=INFO
